syntax = "proto3";

package org.apache.jackrabbit.oak.remote;

option java_package = "org.apache.jackrabbit.oak.remote.proto";
option java_outer_classname = "CommitProtos";

import "node_state.proto";

message Commit {
    CommitInfo commitInfo = 1;
    NodeStateId baseNodeState = 2;
    NodeStateId headNodeState = 3;
    string segmentStoreDir = 4;
}

message CommitInfo {
    string sessionId = 1;
    string userId = 2;
    map<string, string> commitInfo = 3;
    bool isExternal = 4;
}
